<resources>
    <string name="facebook_app_id">2140680242915577</string>
    <string name="fb_login_protocol_scheme">fb2140680242915577</string>
    <string name="path_of_facebook_group_with_filters">337906013661346/feed?fields=link,message,
        created_time,name,full_picture,id,attachments{subattachments}</string>
    <string name="cancel_login_message">You must give Facebook these privileges in order to connect to this app</string>
    <string name="error_login_message">Facebook can not login, try again!</string>
    <string name="app_name" translatable="false">apartmate</string>
    <string name="title_activity_maps">Map</string>
    <string name="inmap_price_view">Price: %1$s</string>
    <string name="inmap_roommates_view">Roommates amount: %1$s</string>
    <string name="inmap_address_view">Address: %1$s</string>
    <string name="privacy_message">Facebook Privacy - We only access rental listings, nothing else</string>
    <string name="new_shekel_sign">\u20AA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Filter_button">Filter</string>
    <string name="TextViewPriceSlider">Price</string>
    <string name="TextViewRoommateSlider">Roommates</string>
    <string name="TextViewDistance">Select your designated search area</string>

    <string name="DoneButtonText">Done</string>
    <string name="ResetButtonText">Reset</string>

    <string name="address">Address:</string>
    <string name="roommates">Roommates:</string>
    <string name="price">Price:</string>

</resources>
