<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/inmap_apartment_container"
    android:orientation="vertical"

    android:layout_width="310dp"
    android:layout_height="110dp">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="100dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPaddingLeft="20dp"
        card_view:contentPaddingTop="20dp"
        android:clickable="true"
        android:id="@+id/inmap_apartment_card"
        card_view:cardBackgroundColor="@android:color/holo_blue_light">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView
            android:id="@+id/inmap_apartment_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:paddingStart="@dimen/padding"
            />

        <TextView
            android:id="@+id/inmap_apartment_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:paddingStart="@dimen/padding"
            />

        <TextView
            android:id="@+id/inmap_apartment_roommates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/roommates"
            android:paddingStart="@dimen/padding"
            />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
